# LuaAutoComplete

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LuaAutoCompleteConfig.cmake  README.md
applications/gui/: CMakeLists.txt  main.cpp
applications/tests/: CMakeLists.txt  coloration_test.cpp  coloration_test.h  main.cpp
cmake/: CompileOptions.cmake  Custom.cmake
libs/editor/: CMakeLists.txt  CompletionModel.cpp  CompletionModel.h  EditorHighlighter.cpp  EditorHighlighter.h  LuaEditor.cpp  LuaEditor.h
libs/editor/lac/editor/: CompletionModel.cpp  EditorHighlighter.cpp  EditorHighlighter.h  LuaEditor.cpp  LuaEditor.h
libs/lac/: CMakeLists.txt
libs/lac/analysis/: analysis_tests.cpp  analyze_block.cpp  get_sub_type.cpp  get_sub_type.h  get_type.cpp  get_type.h  parse_type.cpp  parse_type.h  scope.cpp  scope.h  type_info.cpp  type_info.h  user_defined.cpp  user_defined.h  visitor.cpp  visitor.h
libs/lac/coloration/: coloration_test.cpp  coloration_test.h
libs/lac/completion/: completion.cpp  completion.h  completion_tests.cpp  function_at_pos.cpp  function_at_pos.h  get_block.cpp  get_block.h  type_at_pos.cpp  type_at_pos.h  variable_at_pos.cpp  variable_at_pos.h
libs/lac/helper/: algorithm.h  arguments.cpp  arguments.h  test_utils.cpp  test_utils.h
libs/lac/parser/: ast.h  ast_adapted.h  chunk.cpp  chunk.h  chunk_def.h  config.h  parser.cpp  parser.h  positions.cpp  positions.h  printer.cpp  printer.h
src/: main.cpp  parser.cpp  parser.h  parser_tests.cpp  test.cpp
src/analysis/: analysis_tests.cpp  get_sub_type.cpp  get_sub_type.h  get_type.cpp  get_type.h  scope.cpp  scope.h  tests.cpp  type_info.cpp  type_info.h  user_defined.cpp  user_defined.h  visitor.cpp  visitor.h
src/coloration/: coloration_test.cpp  coloration_test.h
src/completion/: completion.cpp  completion.h  completion_tests.cpp  get_block.cpp  get_block.h  parse_current_line.cpp  parse_current_line.h  type_at_pos.cpp  type_at_pos.h  variable_at_pos.cpp
src/helper/: algorithm.h  test_utils.cpp  test_utils.h
src/parser/: ast.h  ast_adapted.h  chunk.cpp  chunk.h  chunk_def.h  config.h  parser.cpp  parser.h  positions.cpp  positions.h  printer.cpp  printer.h
